--- a/htmlframe-1.html
+++ b/htmlframe-1.html
@@ -8,7 +8,7 @@
     <nav class="header-submenu">
         <div class="header-submenu-wrap">
             <ul class="header-submenu-list"> 
-                <li><a href="htmlframe-1.html"> Home </a></li>
+               
                
  
             </ul>
@@ -32,7 +32,7 @@
 <body>
    
    
-   
+    <h1><a href="htmlframe-1.html"> Home </a></h1>
    
     <div class="main">
 <h1><font-size="200">CIS 114 Homework</font-size></h1>
@@ -49,7 +49,6 @@
 <a href="hw8.html"target="_self"><button>Homework 8</button></a> 
 </br>
 </br>
-</br><a href="mailto:tianmaohuang@my.smccd.edu"> Emil Me</a>
 
 </div>
 
